# yuzu

./: .gitmodules
CMakeModules/: GenerateSCMRev.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt  assert.h  div_ceil.h  dynamic_library.cpp  host_memory.cpp  static_vector.h  threadsafe_queue.h
src/core/: CMakeLists.txt  core.cpp  settings.h
src/core/frontend/: emu_window.h  framebuffer_layout.h
src/glsl_decompiler/: CMakeLists.txt  main.cpp
src/input_common/gcadapter/: gc_adapter.cpp
src/video_core/: CMakeLists.txt  buffer_cache.h  dirty_flags.cpp  dirty_flags.h  fence_manager.h  gpu.h  gpu_asynch.cpp  host_buffer_type.h  morton.cpp  morton.h  rasterizer_cache.h  rasterizer_interface.h  renderer_base.cpp  renderer_base.h  surface.cpp  surface.h  texture_cache.cpp  texture_cache.h  video_core.cpp
src/video_core/buffer_cache/: buffer_cache.h
src/video_core/engines/: fermi_2d.cpp  fermi_2d.h  kepler_compute.cpp  kepler_compute.h  maxwell_3d.cpp  maxwell_3d.h  shader_bytecode.h
src/video_core/host_shaders/: CMakeLists.txt  block_linear_unswizzle_2d.comp  block_linear_unswizzle_3d.comp  pitch_unswizzle.comp  vulkan_blit_color_float.vert
src/video_core/renderer_opengl/: gl_buffer_cache.cpp  gl_buffer_cache.h  gl_device.cpp  gl_device.h  gl_framebuffer_cache.cpp  gl_rasterizer.cpp  gl_rasterizer.h  gl_rasterizer_cache.cpp  gl_rasterizer_cache.h  gl_resource_manager.cpp  gl_shader_cache.h  (+22 more)
src/yuzu/: CMakeLists.txt  bootmanager.cpp  bootmanager.h  loading_screen.cpp  main.cpp  main.h
src/yuzu_cmd/: CMakeLists.txt  config.cpp  default_ini.h  yuzu.cpp
(+109 files in other folders)
